# robotframework-opentelemetry

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  robot.toml
OpenTelemetryListener/: OpenTelemetryListener.py
otl_setup/: spin_up_collector.robot
otl_setup/config/: config.yaml
test/: backend_gpt.py  collector_config.yaml  opencol_test_conf.yaml  otel_test.py  tags_test.robot  test.robot
